Auth service add getclienttoken
